--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app='wdinstagram'>
   <head>
     <title>Angular</title>
     <link rel="stylesheet" href="style.css" />
@@ -9,7 +9,13 @@
     <base href="/" />
 
     <script src="js/app.js"></script>
+    <script src="js/gram.routes.js"></script>
+    <script src="js/controllers/gram.controller.js">
+
+    </script>
   </head>
   <body>
+    <main data-ui-view></main>
+
   </body>
 </html>
