add service and get index working

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <base href="/" />
 
     <script src="js/app.js"></script>
-    <script src="js/gram.routes.js"></script>
-    <script src="js/controllers/gram.controller.js">
 
-    </script>
+    <script src="js/controllers/gram.controller.js"></script>
+      <script src="js/gram.routes.js"></script>
+    <script src="js/services/gram.service.js"></script>
   </head>
   <body>
     <main data-ui-view></main>
