--- a/js/ng-views/show.html
+++ b/js/ng-views/show.html
@@ -1,2 +1,4 @@
 <h2>show working</h2>
 <p>{{vm.gram.author}}</p>
+<img ng-src="{{vm.gram.photo_url}}" alt="{{vm.gram.title}}">
+<p><i>{{vm.gram.body}}</i></p>
