--- a/js/ng-views/show.html
+++ b/js/ng-views/show.html
@@ -1,9 +1,8 @@
-<h1></h1>
+<h3>Author:</h3>
 <p>{{vm.gram.author}}</p>
 <img ng-src="{{vm.gram.photo_url}}" alt="{{vm.gram.title}}">
 <p><i>{{vm.gram.body}}</i></p>
 
-<h2>edit gram</h2>
 <form>
   <input placeholder="author" data-ng-model="vm.gram.author" />
   <input placeholder="body" data-ng-model="vm.gram.body" />
